--- a/basic/basic_NumPy.ipynb
+++ b/basic/basic_NumPy.ipynb
@@ -570,6 +570,245 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1차원 슬라이싱\n",
+    "x = np.arange(20)\n",
+    "print(x[1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]]\n",
+      "[[ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]]\n",
+      "[[ 6  7]\n",
+      " [11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2차원 슬라이싱\n",
+    "x = np.arange(20).reshape(4,5)\n",
+    "print(x)\n",
+    "print(x[1:3])\n",
+    "print(x[1:3, 1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1  2]\n",
+      "  [ 3  4  5]\n",
+      "  [ 6  7  8]\n",
+      "  [ 9 10 11]\n",
+      "  [12 13 14]]\n",
+      "\n",
+      " [[15 16 17]\n",
+      "  [18 19 20]\n",
+      "  [21 22 23]\n",
+      "  [24 25 26]\n",
+      "  [27 28 29]]]\n",
+      "[[10 13]\n",
+      " [25 28]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3차원 슬라이싱\n",
+    "x = np.arange(30).reshape(2,5,3)\n",
+    "print(x)\n",
+    "print(x[:, 3:5, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### indexing & boolean indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]]\n",
+      "6\n",
+      "6\n",
+      "[6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(20).reshape(4,5)\n",
+    "print(a)\n",
+    "\n",
+    "# indexing\n",
+    "print(a[1][1])\n",
+    "print(a[1,1])\n",
+    "print(a[[1,1], [1,2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[False False False False  True]\n",
+      " [ True  True  True  True  True]\n",
+      " [ True  True  True  True  True]\n",
+      " [ True  True  True  True  True]]\n",
+      "[ 4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
+      "[1]\n",
+      "[ 0  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
+      "[4 5 6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# boolean indexing\n",
+    "print(a>3)\n",
+    "print(a[a>3])\n",
+    "print(a[a==1])\n",
+    "print(a[~(a==1)])\n",
+    "print(a[(a>3)&(a<8)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.58386221, 0.94226075, 0.24000114, 0.06733411, 0.68988377],\n",
+       "       [0.60557589, 0.65163753, 0.25338204, 0.2542849 , 0.06948437],\n",
+       "       [0.56811377, 0.96563374, 0.21671266, 0.5219225 , 0.62343651],\n",
+       "       [0.80275569, 0.67532969, 0.54297874, 0.71981433, 0.97198954],\n",
+       "       [0.93914166, 0.23159263, 0.77429823, 0.72985602, 0.83117906]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 난수가 들어가있는 다양한형태의 데이터\n",
+    "np.random.rand(5,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 정수난수\n",
+    "np.random.randint(1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7, 3, 7, 7, 7],\n",
+       "       [1, 4, 6, 5, 1],\n",
+       "       [6, 4, 8, 5, 3],\n",
+       "       [1, 1, 9, 2, 1],\n",
+       "       [6, 6, 1, 2, 4]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 정수형 들어가있는 다양한 형태의 데이터\n",
+    "np.random.randint(1,10,size=(5))\n",
+    "np.random.randint(1,10,size=(5,5))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
